<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo_app2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo_description"
        app:srcCompat="@mipmap/logo_app" />

    <TextView
        android:id="@+id/info_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/boton_atras"
        android:layout_below="@id/logo_app2"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/info_app" />

    <Button
        android:id="@+id/boton_atras"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:text="@string/boton_atras" />

    <TextView
        android:id="@+id/conectado_a3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/boton_atras"
        android:layout_centerHorizontal="true"
        android:text="@string/no_vinculado" />
</RelativeLayout>