<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".Activities.MainActivity">

    <ImageView
        android:id="@+id/logo_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo_description"
        app:srcCompat="@mipmap/logo_app" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/datos_sensores"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="false"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="25dp"
            android:text="@string/datos_sensores" />

        <Button
            android:id="@+id/vincular_pulsera"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/datos_sensores"
            android:layout_alignParentStart="false"
            android:layout_alignParentTop="false"
            android:layout_centerInParent="true"
            android:text="@string/vincular_pulsera" />

        <Switch
            android:id="@+id/encender_app"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_above="@id/acerca_de"
            android:layout_below="@id/btn_configTS"
            android:layout_centerHorizontal="true"
            android:checked="false"
            android:scaleX="3"
            android:scaleY="3"
            android:showText="false"
            android:textSize="14sp" />

        <Button
            android:id="@+id/acerca_de"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="25dp"
            android:text="@string/acerca_de" />

        <TextView
            android:id="@+id/conectado_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/acerca_de"
            android:layout_centerHorizontal="true"
            android:text="@string/no_vinculado" />

        <Button
            android:id="@+id/btn_configTS"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/vincular_pulsera"
            android:layout_centerInParent="true"
            android:text="@string/conf_ts" />

    </RelativeLayout>

</LinearLayout>