<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo_app4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo_description"
        app:srcCompat="@mipmap/logo_app" />

    <Switch
        android:id="@+id/switch_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_app4"
        android:layout_centerHorizontal="true"
        android:scaleX="1"
        android:scaleY="1"
        android:text="@string/esca_disp" />

    <ListView
        android:id="@+id/lista_dispositivos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/boton_atras3"
        android:layout_below="@id/switch_scan"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="#7A5E5E"
        android:divider="@color/white" />

    <Button
        android:id="@+id/boton_atras3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:text="@string/boton_atras" />

</RelativeLayout>